Refactor to have common functions in one file

--- a/brush-scatter.html
+++ b/brush-scatter.html
@@ -9,7 +9,7 @@
     <script src="p5.brush.js"></script>
   </head>
   <body>
-
+    <script src="C.js"></script>
     <script src="brush-scatter.js"></script>
   </body>
 </html>
