--- a/brush-boxplot.html
+++ b/brush-boxplot.html
@@ -9,6 +9,8 @@
     <script src="p5.brush.js"></script>
   </head>
   <body>
+    <script src="C.js"></script>
+
     <script src="brush-boxplot.js"></script>
   </body>
 </html>
