--- a/brush-histogram.html
+++ b/brush-histogram.html
@@ -9,24 +9,7 @@
     <script src="p5.brush.js"></script>
   </head>
   <body>
-    <!-- <script src="brush-histogram.js"></script> -->
+    <script src="C.js"></script>
     <script src="brush-histogram.js"></script>
-    <!-- <script>
-      let font;
-
-      function preload() {
-        font = loadFont("/Inter.ttf");
-      }
-
-      function setup() {
-        createCanvas(500, 500, WEBGL);
-        fill("deeppink");
-        textFont(font);
-        textSize(36);
-        text("p5*js", -100, -100);
-
-        describe('The text "p5*js" written in pink on a white background.');
-      }
-    </script> -->
   </body>
 </html>
