Remove redundant js files

--- a/brush-boxplot.html
+++ b/brush-boxplot.html
@@ -3,14 +3,28 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>P5.js Histogram</title>
+    <title>Boxplot</title>
     <script src="p5.js"></script>
     <script src="spectral.min.js"></script>
     <script src="p5.brush.js"></script>
   </head>
   <body>
     <script src="C.js"></script>
+    <script>
+      function setup() {
+        commonSetup();
 
-    <script src="brush-boxplot.js"></script>
+        const testDataLength = 1000;
+        const testData = [
+          getNormalDistData(testDataLength, random(1, 3), random(2, 5)),
+          getNormalDistData(testDataLength, random(1, 3), random(2, 5)),
+          getNormalDistData(testDataLength, random(1, 3), random(2, 5)),
+          getNormalDistData(testDataLength, random(1, 3), random(2, 5)),
+          getNormalDistData(testDataLength, random(1, 3), random(2, 5)),
+        ];
+
+        drawBoxPlot(testData);
+      }
+    </script>
   </body>
 </html>
