--- a/brush-histogram.html
+++ b/brush-histogram.html
@@ -10,6 +10,17 @@
   </head>
   <body>
     <script src="C.js"></script>
-    <script src="brush-histogram.js"></script>
+    <script>
+      function setup() {
+        commonSetup();
+        // Test data: normally distributed random numbers
+        let testData = getNormalDistData(1000, 100, 40);
+        console.log(testData);
+        // Draw histogram with test data
+        drawHistogram(testData, 10);
+      }
+
+      function draw() {}
+    </script>
   </body>
 </html>
