--- a/index.html
+++ b/index.html
@@ -7,6 +7,27 @@
     <script src="p5.js"></script>
     <script src="spectral.min.js"></script>
     <script src="p5.brush.js"></script>
+    <style>
+      html,
+      body {
+        height: 100%;
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+        background: #fffceb;
+      }
+      canvas {
+        display: block;
+      }
+      #mainCanvas {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-30%, -30%);
+        /* Prevents blurring on some browsers */
+        image-rendering: pixelated;
+      }
+    </style>
   </head>
   <body>
     <script src="C.js"></script>
