Clean up the resizing

--- a/brush-histogram.html
+++ b/brush-histogram.html
@@ -80,7 +80,6 @@
 
           updateChart() {
             try {
-              debugger;
               const parsed = JSON.parse(this.dataInput);
               if (
                 Array.isArray(parsed) &&
@@ -96,17 +95,8 @@
                   margin: this.margin,
                   padding: this.padding,
                 });
-                // Resize canvas if needed
-                resizeCanvas(this.canvasSize, this.canvasSize);
-                // Clear and redraw the canvas
-                clear();
-                background("#fffceb");
-                translate(config.margin, config.margin);
-                textSize(36);
-                textFont(fontBold);
-                text("*p5.databrush", 350, 50);
-                textFont(font);
-                textSize(12);
+                // Resize canvas and setup
+                setupRest();
                 drawHistogram(this.parsedData, this.numBins);
               } else {
                 this.isValidData = false;
