--- a/index.html
+++ b/index.html
@@ -12,21 +12,72 @@
       src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"
     ></script>
     <style>
-      body {
-        font-family: Arial, sans-serif;
-        padding: 20px;
+      * {
+        box-sizing: border-box;
       }
+
+        body {
+          font-family: Arial, sans-serif;
+          margin: 0;
+          padding: 20px;
+          display: flex;
+          gap: 20px;
+          align-items: center;
+          justify-content: center;
+          min-height: 100vh;
+          overflow-x: hidden;
+          background-color: #fffefb;
+        }
+
       .data-input {
         width: 100%;
         height: 100px;
         margin: 10px 0;
         font-family: monospace;
       }
+
       .controls {
+        width: 300px;
+        flex-shrink: 0;
         margin-bottom: 20px;
       }
-      #mainCanvas {
+
+      #chartContainer {
+        flex: 1;
+        min-width: 0;
+        max-width: fit-content;
         border: 1px solid #ccc;
+        overflow: auto;
+        display: flex;
+        align-items: flex-start;
+        justify-content: center;
+      }
+
+      #chartContainer canvas {
+        max-width: 100%;
+        max-height: 100vh;
+        width: auto !important;
+        height: auto !important;
+        display: block;
+        object-fit: contain;
+      }
+
+      /* Responsive layout for smaller screens */
+      @media (max-width: 1000px) {
+        body {
+          flex-direction: column;
+        }
+
+        #chartContainer {
+          width: 100%;
+          order: 1;
+        }
+
+        .controls {
+          width: 100%;
+          order: 2;
+          margin-bottom: 0;
+        }
       }
     </style>
   </head>
