--- a/index.html
+++ b/index.html
@@ -110,7 +110,13 @@
       ><br />
       <label>Padding: <input type="number" x-model="padding" /></label><br />
       <label>Number of Bins: <input type="number" x-model="numBins" /></label
-      ><br />
+      ><br /><br />
+      <button @click="saveChart()">Copy chart to clipboard</button>
+      <span
+        x-show="copyStatus"
+        style="margin-left: 10px; color: #2c695a"
+        x-text="copyStatus"
+      ></span>
     </div>
     <script src="C.js"></script>
     <script>
@@ -123,6 +129,7 @@
             89, 94, 106, 82,
           ],
           isValidData: true,
+          copyStatus: "",
           canvasWidth: config.canvasWidth || 1000,
           canvasHeight: config.canvasHeight || 1000,
           padding: config.padding || 50,
@@ -180,6 +187,36 @@
             } catch (e) {
               this.isValidData = false;
               console.error("Update chart error:", e);
+            }
+          },
+
+          async saveChart() {
+            try {
+              this.copyStatus = "Copying...";
+              const canvas = document.getElementById("mainCanvas");
+              if (!canvas) {
+                this.copyStatus = "Canvas not found";
+                setTimeout(() => (this.copyStatus = ""), 2000);
+                return;
+              }
+
+              canvas.toBlob(async (blob) => {
+                try {
+                  await navigator.clipboard.write([
+                    new ClipboardItem({ "image/png": blob }),
+                  ]);
+                  this.copyStatus = "Copied to clipboard!";
+                  setTimeout(() => (this.copyStatus = ""), 2000);
+                } catch (err) {
+                  console.error("Failed to copy to clipboard:", err);
+                  this.copyStatus = "Failed to copy";
+                  setTimeout(() => (this.copyStatus = ""), 2000);
+                }
+              });
+            } catch (err) {
+              console.error("Error copying chart:", err);
+              this.copyStatus = "Failed to copy";
+              setTimeout(() => (this.copyStatus = ""), 2000);
             }
           },
         };
