--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
       body {
         font-family: Arial, sans-serif;
         margin: 0;
-        padding: 20px;
+        padding: 20px 20px 20px 20px;
         display: flex;
         gap: 20px;
-        align-items: center;
+        align-items: flex-start;
         justify-content: center;
         min-height: 100vh;
         overflow-x: hidden;
@@ -91,20 +91,17 @@
 
       #chartContainer {
         flex: 1;
-        min-width: 0;
+        flex-direction: column;
         max-width: fit-content;
         border: 1px solid #ccc;
-        overflow: auto;
         display: inline-flex;
-        align-items: flex-start;
         justify-content: center;
-        align-self: center;
-        max-height: fit-content;
+        height: 95vh;
       }
 
       #chartContainer canvas {
         max-width: 100%;
-        max-height: 100vh;
+        max-height: calc(100vh - 120px);
         width: auto !important;
         height: auto !important;
         display: block;
@@ -115,17 +112,24 @@
       @media (max-width: 1000px) {
         body {
           flex-direction: column;
+          padding: 20px;
         }
 
         #chartContainer {
           width: 100%;
           order: 1;
+          margin: 20px 0;
+          max-height: 60vh;
+        }
+
+        #chartContainer canvas {
+          max-height: 60vh;
         }
 
         .controls {
           width: 100%;
           order: 2;
-          margin-bottom: 0;
+          margin-bottom: 20px;
         }
       }
     </style>
