Refine chart container responsiveness again

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       body {
         font-family: Arial, sans-serif;
         margin: 0;
-        padding: 20px 20px 20px 20px;
+        padding: 0;
         display: flex;
         gap: 20px;
         align-items: flex-start;
@@ -93,15 +93,19 @@
         flex: 1;
         flex-direction: column;
         max-width: fit-content;
+        height: 100vh;
         border: 1px solid #ccc;
         display: inline-flex;
         justify-content: center;
-        height: 95vh;
+
+        margin: 0;
+        padding: 0;
       }
 
       #chartContainer canvas {
         max-width: 100%;
-        max-height: calc(100vh - 120px);
+        max-height: 95vh;
+        padding: 0;
         width: auto !important;
         height: auto !important;
         display: block;
@@ -109,25 +113,24 @@
       }
 
       /* Responsive layout for smaller screens */
-      @media (max-width: 1000px) {
+      @media (max-width: 800px) {
         body {
           flex-direction: column;
           padding: 20px;
         }
 
         #chartContainer {
-          width: 100%;
-          order: 1;
           margin: 20px 0;
-          max-height: 60vh;
         }
 
-        #chartContainer canvas {
-          max-height: 60vh;
+        #chartcontainer canvas {
+          max-height: 70vh;
         }
+
 
         .controls {
           width: 100%;
+          max-width: 800px;
           order: 2;
           margin-bottom: 20px;
         }
