--- a/index.html
+++ b/index.html
@@ -30,10 +30,26 @@
       }
 
       .data-input {
-        width: 100%;
-        height: 100px;
         margin: 10px 0;
         font-family: monospace;
+      }
+
+      input[type="number"],
+      input[type="text"] {
+        width: 98px;
+        margin-left: 10px;
+        float: right;
+        border-radius: 0;
+        border: none;
+      }
+
+      input[type="color"] {
+        height: 24px;
+        border-radius: 0;
+        padding: 0;
+        border: none;
+        background: none;
+        float: right;
       }
 
       .controls {
@@ -121,7 +137,6 @@
         #chartcontainer canvas {
           max-height: 70vh;
         }
-
 
         .controls {
           width: 100%;
