Remove bg from inputs and add some white to the blur

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
         float: right;
         border-radius: 0;
         border: none;
+        background-color: #ffffff00;
       }
 
       input[type="color"] {
@@ -64,8 +65,11 @@
         flex-shrink: 0;
         position: relative;
         min-height: 100vh;
+        padding-left: 10px;
+        padding-right: 10px;
         backdrop-filter: blur(10px);
         -webkit-backdrop-filter: blur(10px);
+        background-color: #ffffff27;
       }
 
       .collapsible-section {
@@ -150,8 +154,6 @@
 
         .controls {
           margin: 0;
-          padding-left: 10px;
-          padding-right: 10px;
           width: 100%;
           max-width: 800px;
           order: 2;
