--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
       .data-input {
         margin: 10px 0;
         font-family: monospace;
+        width: 100%;
+        background-color: #00000000;
       }
 
       input[type="number"],
@@ -176,6 +178,21 @@
 
       .footer a {
         color: #666;
+      }
+
+      button {
+        font-family: "IBM Plex Serif", sans-serif;
+        background-color: #00000000;
+        color: rgb(0, 0, 0);
+        border: 2px solid #000000;
+        padding: 10px 20px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+        margin-top: 10px;
+        cursor: pointer;
+        border-radius: 5px;
       }
     </style>
   </head>
