--- a/index.html
+++ b/index.html
@@ -69,9 +69,31 @@
         min-height: 100vh;
         padding-left: 10px;
         padding-right: 10px;
+        overflow: hidden;
+        z-index: 999;
+      }
+
+      .controls::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color: #ffffff27;
         backdrop-filter: blur(20px);
         -webkit-backdrop-filter: blur(20px);
-        background-color: #ffffff27;
+        -webkit-mask-image: linear-gradient(
+          to bottom,
+          rgba(0, 0, 0, 0) 0px,
+          rgba(0, 0, 0, 1) 20px
+        );
+        mask-image: linear-gradient(
+          to bottom,
+          rgba(0, 0, 0, 0) 0px,
+          rgba(0, 0, 0, 1) 20px
+        );
+        z-index: -1;
       }
 
       .collapsible-section {
