Update footer to credit p5.brush

--- a/index.html
+++ b/index.html
@@ -331,7 +331,11 @@
         >Please enter valid JSON array</span
       >
       <div class="footer">
-        Tool by <a href="https://github.com/aapo/p5.databrush">Aapo Montin</a>
+        Natural textures from
+        <a href="https://github.com/acamposuribe/p5.brush">p5.brush</a>.
+        <br>
+        Tool and the charts by
+        <a href="https://github.com/aapo/p5.databrush">Aapo Montin</a>
       </div>
     </div>
     <script src="C.js"></script>
