--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         margin: 10px 0;
         font-family: monospace;
         width: 100%;
+        height: 200px;
         background-color: #00000000;
       }
 
@@ -216,6 +217,11 @@
         cursor: pointer;
         border-radius: 5px;
       }
+
+      .button-message {
+        font-size: 12px;
+        margin-left: 10px;
+      }
     </style>
   </head>
   <body x-data="chartData()">
@@ -310,11 +316,18 @@
       <br />
       <button @click="saveChart()">Copy chart to clipboard</button>
       <span
+        class="button-message"
         x-show="copyStatus"
-        style="margin-left: 10px; color: #2c695a"
         x-text="copyStatus"
       ></span>
-
+      <br />
+      <button
+        @click="updateChart()"
+        x-text="'Update Chart'"
+      ></button>
+      <span class="button-message" x-show="!isValidData"
+        >Please enter valid JSON array</span
+      >
       <h3>Histogram Data Input</h3>
       <p>Enter your data as a JSON array (e.g., [85, 92, 78, 105, 88]):</p>
       <textarea
@@ -323,17 +336,11 @@
         placeholder="Enter data as JSON array..."
       ></textarea>
       <br />
-      <button
-        @click="updateChart()"
-        x-text="isValidData ? 'Update Chart' : 'Invalid Data Format'"
-      ></button>
-      <span x-show="!isValidData" style="color: red; margin-left: 10px"
-        >Please enter valid JSON array</span
-      >
+
       <div class="footer">
         Natural textures from
         <a href="https://github.com/acamposuribe/p5.brush">p5.brush</a>.
-        <br>
+        <br />
         Tool and the charts by
         <a href="https://github.com/aapo/p5.databrush">Aapo Montin</a>
       </div>
